# pino-lang

./: .editorconfig  .gitignore  ARCHITECTURE.md  Block.cpp  Block.h  CMakeLists.txt  Checker.h  ControlFlow.cpp  ControlFlow.h  Expression.cpp  Expression.h  Field.cpp  Field.h  Function.cpp  Function.h  GAME_VISION.md  LANGUAGE_REFERENCE.md  Lambda.cpp  Lexer.h  Loop.h  Parser.h  README.md  Statement.h  Struct.h  Transpiler.h  Variable.cpp  Variable.h  add_pino_to_path.sh  build_wasm.ps1  index.js  install.ps1  install.sh  lexer.h  main.cpp  main.pino  parser.h  projects.cmd  transpiler.h  types.h  utils.h  (+1 more)
.agents/: AGENTS.md
benchmark/: fib.pino
benchmarks/: benchmark.cs  benchmark.js  benchmark.pino  benchmark.py  benchmark.rs
commons/: lexer.h  parser.h
game-proposals/: 001-rpg-conversational-ideas.md  002-jade-temple-rpg-expansion.md  003-starpino-odyssey.md
games/: star_pino.pino
legacy/: Block.h  Expression.cpp  Expression.h  Function.cpp  Function.h  Lambda.h  Lexer.h  Loop.h  Statement.h  Struct.h  Transpiler.h  Variable.cpp  Variable.h  index.js  main.pino  utils.h
lexer/: common.h  lexer.h  lexer_utils.h
modules/: lexer.pino
next/: Common.cpp  Common.h  main.cpp
parser/: ControlFlow.cpp  ControlFlow.h  Expression.cpp  Expression.h  Function.cpp  Function.h  Loop.h  Parser.cpp  Parser.h  Statement.cpp  Statement.h  Variable.cpp  Variable.h  global.h  parser.h  parser_utils.h
pino-csharp/: AST.cs  Environment.cs  Evaluator.cs  Lexer.cs  Parser.Statement.cs  Parser.cs  PinoException.cs  PinoRune.cs  Program.cs  Token.cs  Transpiler.cs  TypeChecker.cs  WASMBridge.cs  main.pino  pino-csharp.csproj
pino-csharp.tests/: CheckerTests.cs  LexerTests.cs  LoopTests.cs  ParserTests.Unions.cs  ParserTests.cs  PinoTestRunner.cs  StdlibTests.cs  pino-csharp.tests.csproj
pino.games/: jade_temple.pino  sable.pino  star_pino.pino
pino.site/: .gitignore  astro.config.mjs  index.html  interpreter.js  package.json  playground.js  pnpm-lock.yaml  serve.py  styles.css  sync-assets.js  tsconfig.json
pino.site.old/: interpreter.js  styles.css
proposals/: 001-null-safety-and-default-struct-fields.md  002-static-typechecker-optimizations.md  003-pinovm-future-optimizations.md  004-generics-evolution-roadmap.md  (+8 more)
(+175 files in other folders)
